# MilkDrop3

code/: CMakeLists.txt  wdltypes.h
code/audio/: CMakeLists.txt  audiobuf.cpp  audiobuf.h  common.h  log.cpp  log.h  loopback-capture.cpp  loopback-capture.h
code/ns-eel2/: CMakeLists.txt  asm_nseel_x86_gcc_wrapper.c
code/vis_milk2/: CMakeLists.txt  Milkdrop2PcmVisualizer.cpp  linux_dxcontext_stubs.cpp  linux_utility_stubs.cpp  menu_strings.h  plugin.cpp
code/vis_milk2/glad/: glad.h
code/vis_milk2/linux_includes/vis_milk2/: d3d9.h  d3dx9.h  d3dx9math.h  dxcontext.h  shell_defines.h  utility.h  windows.h
